--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ clap = { version = "3.1.0", features = ["derive"] }
 colored = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+glob = "0.3"
+color-eyre = "0.5"
